--- a/app/src/main/res/layout/activity_loggin.xml
+++ b/app/src/main/res/layout/activity_loggin.xml
@@ -87,6 +87,7 @@
         android:layout_marginRight="50dp"
         android:layout_marginBottom="30dp"
         android:layout_weight="0"
+        android:background="@drawable/btnbg_red"
         android:backgroundTint="#CD4B4B"
         android:foregroundGravity="bottom"
         android:text="Iniciar sesion"
