--- a/app/src/main/res/layout/dialog_add_note_dom.xml
+++ b/app/src/main/res/layout/dialog_add_note_dom.xml
@@ -27,6 +27,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:layout_weight="1"
+        android:backgroundTint="#FF9800"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine" />
