--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
 
     <color name="red">#FE2525</color>
     <color name="green">#30A22E</color>
+    <color name="white">#F0F0F0</color>
 </resources>
