--- a/app/src/main/res/layout/dialog_add_note_dom.xml
+++ b/app/src/main/res/layout/dialog_add_note_dom.xml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#16FFEB3B"
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/textView16"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_weight="0"
         android:background="#FFC107"
-        android:paddingLeft="30dp"
-        android:paddingTop="30dp"
-        android:text="Agregar Nota"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0"
+            android:text="Agregar Nota"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="0"
+            app:srcCompat="@drawable/ico_add_note_foreground" />
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/txtAddNoDomNota"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
