--- a/app/src/main/res/drawable/ico_cancel_uno_foreground.xml
+++ b/app/src/main/res/drawable/ico_cancel_uno_foreground.xml
@@ -3,7 +3,7 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108"
-    android:tint="#60180D">
+    android:tint="#FF0D0D">
   <group android:scaleX="3.4713"
       android:scaleY="3.4713"
       android:translateX="12.3444"
