--- a/app/src/main/res/layout/fragment_nuevo_domicilio.xml
+++ b/app/src/main/res/layout/fragment_nuevo_domicilio.xml
@@ -181,10 +181,12 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="0.1"
+                android:background="@drawable/btnbg_white"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="Descripcion"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:padding="15dp" />
 
             <EditText
                 android:id="@+id/edtNudoCuatro"
@@ -194,32 +196,42 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="20dp"
+                android:background="@drawable/btnbg_white"
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint="Notas"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:padding="15dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btnNuDoTres"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="30dp"
                     android:layout_weight="1"
-                    android:background="#4CAF50"
+                    android:background="@drawable/btnbg_green"
                     android:text="Registrar" />
 
                 <Button
                     android:id="@+id/btnNuDoCuatro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginBottom="30dp"
                     android:layout_weight="1"
-                    android:background="#B33434"
+                    android:background="@drawable/btnbg_red"
                     android:text="cancelar" />
             </LinearLayout>
 
