--- a/app/src/main/res/layout/activity_loggin.xml
+++ b/app/src/main/res/layout/activity_loggin.xml
@@ -18,7 +18,7 @@
         android:drawingCacheQuality="auto"
         android:foregroundGravity="fill"
         android:scaleType="centerInside"
-        app:srcCompat="@drawable/portadaapp" />
+        app:srcCompat="@drawable/portda_dos" />
 
     <ImageView
         android:id="@+id/imageView7"
