--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -77,7 +77,8 @@
             app:destination="@id/getClienteFrg" />
         <action
             android:id="@+id/action_nuevoDomicilioFrag_to_tomarDomicilioFrag"
-            app:destination="@id/tomarDomicilioFrag" />
+            app:destination="@id/tomarDomicilioFrag"
+            app:popUpTo="@id/domiciliosDisponiblesFrag" />
     </fragment>
     <activity
         android:id="@+id/logginActivity"
