--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -2,76 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/btnbg_white"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_weight="0"
-        android:background="#FFC107"
+        android:background="#009688"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="0"
-            android:text="Agregar Nota"
+            android:layout_weight="1"
+            android:text="Confirmar Accion"
             android:textColor="#FFFFFF"
-            android:textSize="36sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/ico_add_note_foreground" />
-
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ico_confirm_foreground" />
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/txtAddNoDomNota"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="1"
-        android:backgroundTint="#FF9800"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="30dp">
 
         <Button
-            android:id="@+id/btnAddNoDomOk"
+            android:id="@+id/btnDiCoOk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/btnbg_green"
-            android:text="Agregar Nota"
+            android:text="Confirmar"
             android:textColor="#FFFFFF" />
 
         <Button
-            android:id="@+id/btnAddNoDomCancel"
+            android:id="@+id/btnDiCoCancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:background="@drawable/btnbg_red"
             android:text="Cancelar"
