--- a/app/src/main/res/layout/item_image_list.xml
+++ b/app/src/main/res/layout/item_image_list.xml
@@ -2,21 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
-    android:layout_height="95dp"
+    android:layout_width="125dp"
+    android:layout_height="97dp"
     android:layout_margin="2dp"
     android:background="@drawable/imgbg_uno"
     android:elevation="5dp"
     android:orientation="vertical"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     android:showDividers="end">
 
     <ImageView
         android:id="@+id/imgItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
+        android:layout_gravity="center|center_horizontal|center_vertical"
         android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
