--- a/app/src/main/res/layout/fragment_domicilio_activo.xml
+++ b/app/src/main/res/layout/fragment_domicilio_activo.xml
@@ -312,7 +312,7 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/listImgOri"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
                 </LinearLayout>
             </HorizontalScrollView>
@@ -347,7 +347,7 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/listImgDest"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
                 </LinearLayout>
             </HorizontalScrollView>
