--- a/app/src/main/res/layout/fragment_domicilio_activo.xml
+++ b/app/src/main/res/layout/fragment_domicilio_activo.xml
@@ -18,16 +18,39 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/divider7"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginBottom="5dp"
-                android:background="@android:color/holo_red_dark"
-                tools:layout_editor_absoluteX="1dp" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <View
+                    android:id="@+id/divider7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_dark"
+                    tools:layout_editor_absoluteX="1dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btnbg_white"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:src="@mipmap/menu_icon_seis_foreground"
+                    android:stateListAnimator="@anim/nav_default_pop_enter_anim" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
