27/dic/2020 -- entrega de un domicilio por un usuario domiciliario a otro usuario del mismo tipo

--- a/app/src/main/res/layout/fragment_domicilio_activo.xml
+++ b/app/src/main/res/layout/fragment_domicilio_activo.xml
@@ -40,7 +40,7 @@
                     tools:layout_editor_absoluteX="1dp" />
 
                 <ImageButton
-                    android:id="@+id/imageButton5"
+                    android:id="@+id/btnDoAcMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_weight="1"
