--- a/app/src/main/res/layout/user_dom_model_row.xml
+++ b/app/src/main/res/layout/user_dom_model_row.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="#FBB0B0"
     android:orientation="vertical">
 
     <LinearLayout
